--- a/buildtools/packages.config
+++ b/buildtools/packages.config
@@ -3,5 +3,7 @@
     <package id="psake" version="4.7.4" />
     <package id="kCura.PSBuildTools" version="0.5.0" />
     <package id="JetBrains.ReSharper.CommandLineTools" version="2018.2.3" />
+    <package id="JetBrains.dotCover.CommandLineTools" version="2018.2.3" />
     <package id="ConfigureAwaitChecker.v9" version="0.15.0" />
+    <package id="NUnit.ConsoleRunner" version="3.9.0" />
 </packages>
