--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -123,6 +123,7 @@
     <Compile Include="IServiceManagerProvider.cs" />
     <Compile Include="Models\IRdoFilter.cs" />
     <Compile Include="Monitoring\HealthCheck.cs" />
+    <Compile Include="Monitoring\Instrumentation\ExternalServiceInstrumentationProviderWithoutJobContext.cs" />
     <Compile Include="Monitoring\Instrumentation\ExternalServiceSimpleInstrumentation.cs" />
     <Compile Include="Monitoring\Instrumentation\Model\ExternalCallCompletedMessage.cs" />
     <Compile Include="Monitoring\Instrumentation\ExternalServiceInstrumentation.cs" />
