--- a/scripts/Build.Sign.targets
+++ b/scripts/Build.Sign.targets
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Target Name="Sign" Condition="'$(CertificateThumbprint)' != ''" AfterTargets="Build">
+    <Target Name="Sign" Condition="'$(CertificateThumbprint)' != '' AND '$(SignToolPath)' != ''" AfterTargets="Build">
         <Message Text="Signing $(OutputPath)$(AssemblyName).dll" />
-        <SignFile CertificateThumbprint="$(CertificateThumbprint)" SigningTarget="$(OutputPath)$(AssemblyName).dll" TimestampUrl="http://timestamp.comodoca.com/authenticode"/>
+        <Message Text="Usign tool from $(SignToolPath)" />
+        <Exec Command="&quot;$(SignToolPath)&quot; sign /sha1 $(CertificateThumbprint) /t http://timestamp.comodoca.com/authenticode /d Relativity /du http://www.relativity.com $(OutputPath)$(AssemblyName).dll" />
     </Target>
 </Project>
