--- a/Source/kCura.IntegrationPoints.FtpProvider.Connection/kCura.IntegrationPoints.FtpProvider.Connection.csproj
+++ b/Source/kCura.IntegrationPoints.FtpProvider.Connection/kCura.IntegrationPoints.FtpProvider.Connection.csproj
@@ -48,6 +48,7 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="FtpStream.cs" />
     <Compile Include="SftpConnector.cs" />
     <Compile Include="ConnectorFactory.cs" />
     <Compile Include="FtpConnector.cs" />
